tests/ui/feature-gates/feature-gate-no_coverage.stderr
error[E0658]: the `#[no_coverage]` attribute is an experimental feature
  --> $DIR/feature-gate-no_coverage.rs:9:1
   |
LL | #[no_coverage]
   | ^^^^^^^^^^^^^^
   |
   = note: see issue #84605 <https://github.com/crablang/crablang/issues/84605> for more information
   = help: add `#![feature(no_coverage)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
